# bmx

./: .bazelrc  .gitignore  .goreleaser.yml  BUILD  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  console.go  console_test.go  credential-process.go  deps.bzl  go.mod  go.sum  login.go  nogo_config.json  print.go  print_test.go  print_unix.go  write.go
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: goreleaser.yml  main.yml
bazel/go/: deps.bzl
bazel/scripts/: stamp.sh
cmd/bmx/: BUILD.bazel  bmx.go  bmx_cross.go  bmx_darwin.go  bmx_default.go  config.go  credential-process.go  login.go  logout.go  print.go  version.go  write.go
config/: BUILD.bazel  config_test.go  loadConfig.go
console/: AppleScript.go  BUILD.bazel  ConsoleReader.go  ConsoleReader_unix.go  ConsoleReader_windows.go
docs/: README.md  credential_process.md  input.md
docs/commands/: version.md
docs/config/: README.md  config.md  input.md  sample.md
internal/andybrewer/mack/: BUILD.bazel  dialog.go
mocks/: BUILD.bazel  consoleReader.go  mokta.go
saml/identityProviders/: BUILD.bazel  IdentityProvider.go
saml/identityProviders/okta/: BUILD.bazel  okta.go  okta_test.go
saml/identityProviders/okta/file/: BUILD.bazel  oktaSession.go
saml/identityProviders/okta/mocks/: BUILD.bazel  mocks.go
saml/serviceProviders/: BUILD.bazel  UserInfo.go  serviceProvider.go
saml/serviceProviders/aws/: BUILD.bazel  provider.go  provider_test.go
saml/serviceProviders/aws/mocks/: BUILD.bazel  awsServiceProvider.go
tools/: docker.windows.bash  stamp.sh
