load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["loadConfig.go"],
    importpath = "github.com/rtkwlf/bmx/config",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/mitchellh/go-homedir:go_default_library",
        "//vendor/gopkg.in/ini.v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/magiconair/properties/assert:go_default_library"],
)
