load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "AppleScript.go",
        "ConsoleReader.go",
    ],
    importpath = "github.com/rtkwlf/bmx/console",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_andybrewer_mack//:go_default_library",
        "@org_golang_x_crypto//ssh/terminal:go_default_library",
    ],
)
