load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "AppleScript.go",
        "ConsoleReader.go",
    ],
    importpath = "github.com/rtkwlf/bmx/console",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/andybrewer/mack:go_default_library",
        "//vendor/golang.org/x/crypto/ssh/terminal:go_default_library",
    ],
)
