load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "consoleReader.go",
        "mokta.go",
    ],
    importpath = "github.com/jrbeverly/bmx/mocks",
    visibility = ["//visibility:public"],
    deps = ["//saml/identityProviders/okta:go_default_library"],
)
