load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bmx.go",
        "bmx_darwin.go",
        "bmx_default.go",
        "config.go",
        "credential-process.go",
        "login.go",
        "print.go",
        "version.go",
        "write.go",
    ],
    importpath = "github.com/rtkwlf/bmx/cmd/bmx",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//config:go_default_library",
        "//console:go_default_library",
        "//saml/identityProviders/okta:go_default_library",
        "//saml/serviceProviders/aws:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@in_gopkg_ini_v1//:go_default_library",
    ],
)

go_binary(
    name = "bmx",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {
        "version": "{BMX_VERSION}",
        "commit": "{STABLE_GIT_COMMIT}",
    },
)
