load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "UserInfo.go",
        "serviceProvider.go",
    ],
    importpath = "github.com/rtkwlf/bmx/saml/serviceProviders",
    visibility = ["//visibility:public"],
    deps = [
        "//saml/serviceProviders/aws:go_default_library",
        "@com_github_aws_aws_sdk_go//service/sts:go_default_library",
    ],
)
