load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "alert.go",
        "beep.go",
        "clipboard.go",
        "dialog.go",
        "list.go",
        "mack.go",
        "notification.go",
        "say.go",
        "tell.go",
    ],
    importpath = "github.com/rtkwlf/bmx/internal/andybrewer/mack",
    visibility = ["//visibility:public"],
)
