load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["awsServiceProvider.go"],
    importpath = "github.com/rtkwlf/bmx/saml/serviceProviders/aws/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//saml/serviceProviders/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/sts:go_default_library",
    ],
)
